--- a/accordion-menu-variables.css
+++ b/accordion-menu-variables.css
@@ -1,6 +1,6 @@
 :root {
-    --accordion-submenu-margin-right: 1.2rem;
-    --accordion-menu-item-border-bottom-width: 0.1rem;
-    --accordion-menu-item-border-bottom-color: var(--MOBILE-MENU-ITEMS-BOTTOM-BORDER-COLOR);
-    --accordion-menu-expand-speed: 0.35s;
+    /* --accordion-submenu-margin-right: 1.2rem; */
+    /* --accordion-menu-item-border-bottom-width: 0.1rem; */
+    /* --accordion-menu-item-border-bottom-color: var(--MOBILE-MENU-ITEMS-BOTTOM-BORDER-COLOR); */
+    /* --accordion-menu-expand-speed: 0.35s; */
 }
